# Crossplay

./: .gitignore  CMakeLists.txt  Clock.cpp  Clock.h  Definitions.h  Hardware.h  LICENSE  main.cpp
GameBoyColorEmulator/: Bus.cpp  Bus.h  Button.h  CMakeLists.txt  Consts.h  GbCpu.cpp  GbCpu.h  GbMemory.cpp  GbMemory.h  GbPPU.cpp  GbPPU.h  Instruction.h  InterruptController.cpp  InterruptController.h  InterruptType.h  InterruptVectorTable.cpp  InterruptVectorTable.h  PPU.cpp  PPU.h  Registers.h  Serial.h  StopCpuException.h  Timer.cpp  Timer.h
GameBoyColorEmulator/Cartridges/: Cartridge.cpp  Cartridge.h  CartridgeHeader.h
GameBoyColorEmulator/Cpu/: GbCpu.cpp  GbCpu.h  GbCpu.initAdd.cpp  GbCpu.initAnd.cpp  GbCpu.initC.cpp  GbCpu.initDec.cpp  GbCpu.initInc.cpp  GbCpu.initJ.cpp  GbCpu.initLda.cpp  GbCpu.initLdb.cpp  GbCpu.initLdc.cpp  GbCpu.initLdd.cpp  GbCpu.initLde.cpp  GbCpu.initLdh.cpp  GbCpu.initLdl.cpp  GbCpu.initPushPop.cpp  GbCpu.initR.cpp  GbCpu.initRst.cpp  GbCpu.initSub.cpp  GbCpu.initXor.cpp
GameBoyColorEmulator/Cpu/PrefixCb/: GbCpu.PrefixCb.InitB.cpp  GbCpu.PrefixCb.InitR.cpp  GbCpu.PrefixCb.InitS.cpp
GameBoyColorEmulator/DMA/: DMA.cpp  DMA.h
GameBoyColorEmulator/Interrupts/: ISR.cpp  ISR.h  InterruptController.cpp  InterruptType.h  InterruptVectorTable.cpp  InterruptVectorTable.h
GameBoyColorEmulator/MBC/: CartridgeHeader.cpp  CartridgeHeader.h  MBC1.cpp  MBC1.h  MBC3.cpp  MBC3.h  MBC4.cpp  MBC4.h  MBC5.cpp  MBC5.h  MBC6.cpp  MBC6.h  MBC7.cpp  MBC7.h  NoMBC.cpp  NoMBC.h  mbc2.cpp  mbc2.h
GameBoyColorEmulator/Memory/: Bank.cpp  Bank.h  Memory.cpp  Memory.h
GameBoyColorEmulator/PPU/: GbPPU.cpp  GbPPU.h  LcdControl.h  Tile.hpp
Interfaces/: CMakeLists.txt  IApu.h  ICpu.h  IGpu.h  IInputDevice.h  IMBC.h  IMemory.h  IMemoryBankController.h  IPPU.h  IStorage.h
